...
        contentContainerStyle={styles.scrollContainer}
        showsVerticalScrollIndicator={false}
        onEndReached={fetchMoreData}
        onEndReachedThreshold={0.1}
        ListHeaderComponent={
          <>
            <Text style={styles.subHeader}>Tus reportes:</Text>
            {isLoading && (
              <ActivityIndicator size="large" style={{ marginTop: 20 }} />
            )}
          </>
        }
        ListEmptyComponent={
...
